[gd_scene load_steps=5 format=3 uid="uid://dbmcpgfokf0in"]

[ext_resource type="PackedScene" uid="uid://dfw7m0a7148fu" path="res://sources/language_tool/word_list.tscn" id="1_bfjhw"]
[ext_resource type="Script" uid="uid://7pymixi5vsat" path="res://sources/language_tool/sentence_list.gd" id="2_q3ll5"]
[ext_resource type="PackedScene" uid="uid://dx33ijlgd8m3w" path="res://sources/language_tool/word_list_element.tscn" id="3_jl0ks"]
[ext_resource type="PackedScene" uid="uid://cy14lm72cd7cy" path="res://sources/language_tool/sentence_list_element.tscn" id="3_ys88k"]

[node name="SentenceList" instance=ExtResource("1_bfjhw")]
script = ExtResource("2_q3ll5")
element_scene = ExtResource("3_ys88k")

[node name="ExportNotFoundButton" type="Button" parent="VBoxContainer" index="5"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "-> Click here to export the list of words not found <-"

[node name="Label" parent="NewGPLayer" index="1"]
text = "New Word"

[node name="VBoxContainer" parent="NewGPLayer" index="2"]
visible = false

[node name="Title" parent="NewGPLayer/VBoxContainer" index="0"]
visible = false

[node name="NewGP" parent="NewGPLayer/VBoxContainer" index="1"]
unique_name_in_owner = false
visible = false

[node name="VBoxContainer2" type="VBoxContainer" parent="NewGPLayer" index="3"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -222.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" parent="NewGPLayer/VBoxContainer2" index="0" instance=ExtResource("3_jl0ks")]
layout_mode = 2
script = null

[node name="Word" parent="NewGPLayer/VBoxContainer2/Title/TabContainer/NormalContainer" index="2"]
text = "Word"

[node name="Graphemes" parent="NewGPLayer/VBoxContainer2/Title/TabContainer/NormalContainer" index="3"]
text = "Graphemes"

[node name="EditButton" parent="NewGPLayer/VBoxContainer2/Title/TabContainer/NormalContainer" index="6"]
modulate = Color(1, 1, 1, 0)

[node name="NewGP" parent="NewGPLayer/VBoxContainer2" index="1" instance=ExtResource("3_jl0ks")]
unique_name_in_owner = true
layout_mode = 2

[node name="FileDialogExport" type="FileDialog" parent="." index="2"]
initial_position = 2
size = Vector2i(1500, 1000)
popup_window = true
access = 2

[connection signal="pressed" from="VBoxContainer/ExportNotFoundButton" to="." method="_on_export_not_found_button_pressed"]
[connection signal="validated" from="NewGPLayer/VBoxContainer2/NewGP" to="." method="_on_gp_list_element_validated"]

[editable path="NewGPLayer/VBoxContainer/Title"]
[editable path="NewGPLayer/VBoxContainer/Title/TabContainer/NormalContainer/EditButton"]
[editable path="NewGPLayer/VBoxContainer/Title/TabContainer/EditContainer/DeleteButton"]
[editable path="NewGPLayer/VBoxContainer/Title/TabContainer/EditContainer/ValidateButton"]
[editable path="NewGPLayer/VBoxContainer/NewGP"]
[editable path="NewGPLayer/VBoxContainer/NewGP/TabContainer/NormalContainer/EditButton"]
[editable path="NewGPLayer/VBoxContainer/NewGP/TabContainer/EditContainer/DeleteButton"]
[editable path="NewGPLayer/VBoxContainer/NewGP/TabContainer/EditContainer/ValidateButton"]
[editable path="NewGPLayer/VBoxContainer2/Title"]
[editable path="NewGPLayer/VBoxContainer2/Title/TabContainer/NormalContainer/EditButton"]
[editable path="NewGPLayer/VBoxContainer2/Title/TabContainer/EditContainer/HBoxContainer/ValidateButton"]
[editable path="NewGPLayer/VBoxContainer2/Title/TabContainer/EditContainer/HBoxContainer/MinusButton"]
[editable path="NewGPLayer/VBoxContainer2/Title/TabContainer/EditContainer/ScrollContainer/HBoxContainer/RemoveGPButton2"]
[editable path="NewGPLayer/VBoxContainer2/NewGP"]
[editable path="NewGPLayer/VBoxContainer2/NewGP/TabContainer/NormalContainer/EditButton"]
[editable path="NewGPLayer/VBoxContainer2/NewGP/TabContainer/EditContainer/HBoxContainer/ValidateButton"]
[editable path="NewGPLayer/VBoxContainer2/NewGP/TabContainer/EditContainer/HBoxContainer/MinusButton"]
[editable path="NewGPLayer/VBoxContainer2/NewGP/TabContainer/EditContainer/ScrollContainer/HBoxContainer/RemoveGPButton2"]
